# Data-Engineering-Zoomcamp

./: .gitignore  pyproject.toml  steps.txt
01-docker-sql/: docker-compose.yaml  ingest_data.py
01-terraform-basics/: main.tf
02-workflow-orchestration/: docker-compose.yaml  gcp_taxi_template_put_keys_in_KV_pairs.yaml
1-docker_sql/: docker-compose.yaml  ingest_data.py  upload-data.ipynb
dlt_workshop/: Untitled  check_db.py  debug.py  dlt_script.py  get_answers.py  loc.py
dlt_workshop/data/: nyc_taxi_api.duckdb  yellow_taxi_data.duckdb  yellow_taxi_database.duckdb
